--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 APP_NAME="POS"
 APP_TITLE=""
-APP_ENV="live"
+APP_ENV="testing"
 APP_KEY=base64:W8UqtE9LHZW+gRag78o4BCbN1M0w4HdaIFdLqHJ/9PA=
-APP_DEBUG="false"
+APP_DEBUG="true"
 APP_LOG_LEVEL=debug
 APP_URL="http://localhost/pos/public"
 APP_LOCALE=en
