--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.1.3",
         "aloha/twilio": "^4.0",
         "arcanedev/log-viewer": "~4.7.0",
+        "arielmejiadev/larapex-charts": "^1.0",
         "automattic/woocommerce": "^3.0",
         "barryvdh/laravel-dompdf": "^0.8.7",
         "composer/semver": "^1.4",
